--- a/tinker/faculty_bio/templates/faculty-bio-home.html
+++ b/tinker/faculty_bio/templates/faculty-bio-home.html
@@ -1,14 +1,14 @@
 {% extends "tinker_base.html" %}
 
-{% block title %}Home{% endblock %}
+{% set title = 'Faculty Bios' %}
 
 {% block styles %}
-  <style type="text/css">
-      {# Override the default height for a select field #}
+    <style type="text/css">
+        {# Override the default height for a select field #}
         select {
             height: auto !important;
         }
-  </style>
+    </style>
 {% endblock %}
 
 {% block page_title %}Bethel University Tinker{% endblock %}
@@ -17,118 +17,121 @@
 {% macro display_bio(bio) -%}
     <div class="row">
         <div class="large-6 columns">
-          <p>
-            {% if bio.path != '' %}
-              <a href={{ bio.path }}>{{ bio.title }}</a>
-            {% else %}
-              {{ bio.title }}
-            {% endif %}
-            <br/>
-            {% if bio.path != '' %}<small><a href={{ bio.path }}>{{ bio.path }}</a></small>{% endif %}
-          </p>
+            <p>
+                {% if bio.path != '' %}
+                    <a href={{ bio.path }}>{{ bio.title }}</a>
+                {% else %}
+                    {{ bio.title }}
+                {% endif %}
+                <br/>
+                {% if bio.path != '' %}
+                    <small><a href={{ bio.path }}>{{ bio.path }}</a></small>{% endif %}
+            </p>
         </div>
         <div class="large-6 columns small-3">
-          <ul class="button-group">
-            {% if bio.path != '' %}
-              <li><a href="{{ bio.path }}" class="small button success">View</a></li>
-              <li><a href="/faculty-bio/edit/{{ bio.id }}#page-title" class="small button">Edit</a></li>
-            {% else %}
-              <li><a class="small button success">Not Approved</a></li>
-            {% endif %}
-            <li><a href="#" data-reveal-id="confirmModal" id="{{ bio.id }}" data-faculty-bio-id="{{ bio.id }}" class="small button alert delete-press">Delete</a></li>
-           </ul>
+            <ul class="button-group">
+                {% if bio.path != '' %}
+                    <li><a href="{{ bio.path }}" class="small button success">View</a></li>
+                    <li><a href="/faculty-bio/edit/{{ bio.id }}#page-title" class="small button">Edit</a></li>
+                {% else %}
+                    <li><a class="small button success">Not Approved</a></li>
+                {% endif %}
+                <li><a href="#" data-reveal-id="confirmModal" id="{{ bio.id }}" data-faculty-bio-id="{{ bio.id }}"
+                       class="small button alert delete-press">Delete</a></li>
+            </ul>
         </div>
         <hr/>
-      </div>
+    </div>
 {%- endmacro %}
 
 {% block main_content %}
-<div class="row">
-  <div class="large-12 columns">
+    <div class="content">
+        <div class="row">
+            <div class="large-12 columns">
 
-    <p>Below is a list of faculty bios you have access to edit. If you don't see your faculty bio, please contact your web author.
-    </p>
-  </div>
- </div>
-<hr/>
-
-<div class="row">
-
-  <div class="large-12 columns">
-    {% if show_create %}
-      <a href="/faculty-bio/edit/new#page-title" class="small button success">Create New Bio</a>
-    {% endif %}
-    {% if show_special_admin_view %}
-        {# add extra sorting buttons #}
-        <div>
-            <label><h3>View:</h3>
-            <select size="{{ all_schools|length }}" id="school-selector" multiple>
-                {% for schools in all_schools %}
-                    {% for class_name, school_name in schools.items() %}
-                        <option value="{{ class_name }}" selected="selected">{{ school_name }}</option>
-                    {% endfor %}
-                {% endfor %}
-            </select>
-            </label>
-            <script type="text/javascript">
-                $("#school-selector").change(function () {
-                    $('.school-bios').hide();
-                    var array_of_values = $("#school-selector").val();
-                    for( i=0; i<array_of_values.length;i++) {
-                        $('.' + array_of_values[i]).show();
-                    }
-                });
-            </script>
+                <p>Below is a list of faculty bios you have access to edit. If you don't see your faculty bio, please
+                    contact your web author.
+                </p>
+            </div>
         </div>
         <hr/>
 
-        {# show all bios #}
-        {% for schools in all_schools %}
-            {% for class_name, school_name in schools.items() %}
-                <div class="{{ class_name }} school-bios">
-                    <h3>{{ school_name }}</h3>
-                    <div style="padding-left: 5%">
-                        {% for bio in forms%}
-                            {% if school_name in bio.schools %}
-                                {{ display_bio(bio) }}
-                            {% elif 'Bethel University' in bio.schools and class_name == 'bu' %}
-                                {{ display_bio(bio) }}
-                            {% endif %}
-                        {% endfor %}
+        <div class="row">
+
+            <div class="large-12 columns">
+                {% if show_create %}
+                    <a href="/faculty-bio/edit/new#page-title" class="small button success">Create New Bio</a>
+                {% endif %}
+                {% if show_special_admin_view %}
+                    {# add extra sorting buttons #}
+                    <div>
+                        <label><h3>View:</h3>
+                            <select size="{{ all_schools|length }}" id="school-selector" multiple>
+                                {% for schools in all_schools %}
+                                    {% for class_name, school_name in schools.items() %}
+                                        <option value="{{ class_name }}" selected="selected">{{ school_name }}</option>
+                                    {% endfor %}
+                                {% endfor %}
+                            </select>
+                        </label>
+                        <script type="text/javascript">
+                            $("#school-selector").change(function () {
+                                $('.school-bios').hide();
+                                var array_of_values = $("#school-selector").val();
+                                for (i = 0; i < array_of_values.length; i++) {
+                                    $('.' + array_of_values[i]).show();
+                                }
+                            });
+                        </script>
                     </div>
-                </div>
-            {% endfor %}
-        {% endfor %}
-    {% else %} {# basic view #}
-       {% for bio in forms%}
-           {{ display_bio(bio) }}
-        {% endfor %}
-    {% endif %}
-  </div>
-</div>
+                    <hr/>
+
+                    {# show all bios #}
+                    {% for schools in all_schools %}
+                        {% for class_name, school_name in schools.items() %}
+                            <div class="{{ class_name }} school-bios">
+                                <h3>{{ school_name }}</h3>
+                                <div style="padding-left: 5%">
+                                    {% for bio in forms %}
+                                        {% if school_name in bio.schools %}
+                                            {{ display_bio(bio) }}
+                                        {% elif 'Bethel University' in bio.schools and class_name == 'bu' %}
+                                            {{ display_bio(bio) }}
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
+                {% else %} {# basic view #}
+                    {% for bio in forms %}
+                        {{ display_bio(bio) }}
+                    {% endfor %}
+                {% endif %}
+            </div>
+        </div>
 
 
-
-
-{#Delete confirm modal#}
-<div id="confirmModal" class="reveal-modal" data-reveal>
-  <h2>Are you sure you want to delete?</h2>
-  <p class="lead">Your faculty bio page will be removed.</p>
-  <a class="modal-confirm" id="modal-confirm" href="/faculty-bio/delete/formid">Delete</a>
-  <a class="close-reveal-modal">&#215;</a>
-</div>
+        {#Delete confirm modal#}
+        <div id="confirmModal" class="reveal-modal" data-reveal>
+            <h2>Are you sure you want to delete?</h2>
+            <p class="lead">Your faculty bio page will be removed.</p>
+            <a class="modal-confirm" id="modal-confirm" href="/faculty-bio/delete/formid">Delete</a>
+            <a class="close-reveal-modal">&#215;</a>
+        </div>
+    </div>
 
 {% endblock %}
 
 {% block scripts %}
 
-{#  Script to update the modal submit to delete the correct form#}
-  <script type="text/javascript">
-    $(".delete-press").click(function(){
-      $("#modal-confirm").attr("href", "/faculty-bio/delete/" + $(this).data('faculty-bio-id'));
-    });
-  $(document).foundation();
-  </script>
+    {#  Script to update the modal submit to delete the correct form#}
+    <script type="text/javascript">
+        $(".delete-press").click(function () {
+            $("#modal-confirm").attr("href", "/faculty-bio/delete/" + $(this).data('faculty-bio-id'));
+        });
+        $(document).foundation();
+    </script>
 
 {% endblock %}
 
