--- a/tinker/faculty_bio/templates/faculty-bio-form.html
+++ b/tinker/faculty_bio/templates/faculty-bio-form.html
@@ -478,7 +478,6 @@
 
         }
 
-
         {% if new_job_titles %}
           var new_job_titles = {{ new_job_titles|safe }};
           var i = 0;
@@ -492,7 +491,7 @@
               }
               //Convert to correct value
               id = i + 1;
-              
+
               //If this is not the first node, create it before we can populate it and insert after the last one.
               //show the remove button
               if (i != 0) {
@@ -538,7 +537,7 @@
               $("#remove_jdegree_button").show();
             }
             //Now populate the fieldset
-            populateDegreeFieldset(id, degree['school'], degree['degree-earned'], degree['year'] )
+            populateDegreeFieldset(id, degree['school'], degree['degree_earned'], degree['year'] )
             //no infinite loops today
             i++;
 
