--- a/tinker/admin/sync/templates/sync-home.html
+++ b/tinker/admin/sync/templates/sync-home.html
@@ -17,6 +17,9 @@
 </script>
 
 <p>The sync data is contained in this <a target="_blank" href="https://github.com/betheluniversity/tinker/blob/master/tinker/admin/sync/sync_metadata.py">file</a>. You can sync a specific metadata set, data definition, or sync all.</p>
+<form>
+{{ form.csrf_token }}
+</form>
 
 <div class="row">
     <div class="large-6 columns">
