--- a/tinker/faculty_bio/templates/faculty-bio-home.html
+++ b/tinker/faculty_bio/templates/faculty-bio-home.html
@@ -51,7 +51,7 @@
     <div class="content">
         <div class="container-fluid">
             <div class="col-md-12">
-                <p id="faculty-p">Below is a list of faculty bios you have access to edit. If you don't see your faculty
+                <p id="faculty-p" class="description">Below is a list of faculty bios you have access to edit. If you don't see your faculty
                     bio,
                     please contact your web author.
                 </p>
